--- a/.github/workflows/update-4th-down-data.yml
+++ b/.github/workflows/update-4th-down-data.yml
@@ -1,2 +1,17 @@
-- name: Run R script
-  run: Rscript generate_csv_eagles_4th_downs_all_time.R
+name: Update 4th Down Data
+
+on:
+  workflow_dispatch:
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Run R script
+        run: Rscript generate_csv_eagles_4th_downs_all_time.R
