--- a/.github/workflows/update-4th-down-data.yml
+++ b/.github/workflows/update-4th-down-data.yml
@@ -13,5 +13,10 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install R packages
+        run: |
+          Rscript -e 'install.packages("remotes")'
+          Rscript -e 'remotes::install_github("nflverse/nflfastR")'
+
       - name: Run R script
         run: Rscript generate_csv_eagles_4th_downs_all_time.R
