--- a/.github/workflows/update-4th-down-data.yml
+++ b/.github/workflows/update-4th-down-data.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Install R packages
         run: |
+          mkdir -p ~/R
+          echo 'R_LIBS_USER="~/R"' >> ~/.Renviron
           Rscript -e 'install.packages("nflfastR", repos = "https://cran.rstudio.com")'
 
       - name: Run R script
