--- a/.github/workflows/update-4th-down-data.yml
+++ b/.github/workflows/update-4th-down-data.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R packages
-        run: |
-          mkdir -p ~/R
-          echo 'R_LIBS_USER="~/R"' >> ~/.Renviron
-          Rscript -e 'install.packages("nflfastR", repos = "https://cran.rstudio.com")'
+
+      - name: Setup R dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: nflfastR
 
       - name: Run R script
         run: Rscript generate_csv_eagles_4th_downs_all_time.R
