--- a/.github/workflows/update-4th-down-data.yml
+++ b/.github/workflows/update-4th-down-data.yml
@@ -21,3 +21,11 @@ jobs:
 
       - name: Run R script
         run: Rscript generate_csv_eagles_4th_downs_all_time.R
+
+      - name: Commit and push CSV updates
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add _data/*.csv assets/data/*.csv
+          git commit -m 'Automated CSV update' || echo "No changes to commit"
+          git push
