--- a/.github/workflows/generate_csv_eagles_all_plays.yml
+++ b/.github/workflows/generate_csv_eagles_all_plays.yml
@@ -17,12 +17,21 @@ jobs:
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.1'
 
-
-      - name: Setup R dependencies
+      - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: nflfastR
+          extra-packages: |
+            nflfastR
+            dplyr
+            purrr
+            readr
+            jsonlite
+            stringr
+            tibble
+          cache: true
 
       - name: Run R script
         run: Rscript scripts/generate_csv_eagles_all_plays.R TRUE
